buttons scale with window size

--- a/p5SoundVis/index.html
+++ b/p5SoundVis/index.html
@@ -10,5 +10,9 @@
     <script src="sketch.js"></script>
   </head>
   <body>
+      <style type="text/css">
+        body {padding: 0; margin: 0; overflow:hidden;}
+        body::-webkit-scrollbar { display: none; }
+      </style>
   </body>
 </html>
